<resources>
    <string name="app_name">Гурманы</string>
    <string name="main_screen_name">Главная</string>
    <string name="search_screen_name">Поиск</string>
    <string name="favorite_screen_name">Избранное</string>
    <string name="profile_screen_name">Профиль</string>
    <string name="add_recipe">Добавить\nрецепт</string>
    <string name="my_recipe">Мои рецепты</string>
    <string name="purchases">Покупки</string>
    <string name="food_categories">Категории блюд</string>
    <string name="popular_food">Популярные блюда</string>
    <string name="all_btn">Все</string>
    <string name="dessert">Десерты</string>
    <string name="garnish">Гарниры</string>
    <string name="pastry">Выпечка</string>
    <string name="salad">Салаты</string>
    <string name="sauce">Соусы</string>
    <string name="snack">Закуски</string>
    <string name="repeat">Повторить</string>
    <string name="error_screen_title">По данному запросу ничего не найдено</string>
    <string name="not_connection_title">Отсутствует интернет-соединение</string>
    <string name="error_screen_subtitle">Попробуйте изменить запрос</string>
    <string name="not_connection_subtitle">Проверьте подключение. При наличии сети экран обновится автоматически</string>
    <string name="search_view_title">Поиск по ингредиентам</string>
</resources>