<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/mainFragment"
            android:icon="@drawable/ic_main_not_selected"
            android:title="@string/main_screen_name" />

    <item
            android:id="@+id/searchFragment"
            android:icon="@drawable/ic_search_not_selected"
            android:title="@string/search_screen_name" />

    <item
            android:id="@+id/favoriteFragment"
            android:icon="@drawable/ic_favorites_not_selected"
            android:title="@string/favorite_screen_name" />
    <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_profile_not_selected"
            android:title="@string/profile_screen_name" />
</menu>