<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/navigation"
        app:startDestination="@id/mainFragment">
    <fragment
            android:id="@+id/mainFragment"
            android:name="com.example.fooders.ui.mainScreen.MainFragment"
            android:label="@string/main_screen_name"
            tools:layout="@layout/fr_main"/>
    <fragment
            android:id="@+id/searchFragment"
            android:name="com.example.fooders.ui.searchScreen.SearchFragment"
            android:label="@string/search_screen_name"
            tools:layout="@layout/fr_search"/>
    <fragment
            android:id="@+id/favoriteFragment"
            android:name="com.example.fooders.ui.favoriteScreen.FavoriteFragment"
            android:label="@string/favorite_screen_name"
            tools:layout="@layout/fr_favorite"/>
    <fragment
            android:id="@+id/profileFragment"
            android:name="com.example.fooders.ui.profileScreen.ProfileFragment"
            android:label="@string/profile_screen_name"
            tools:layout="@layout/fr_search"/>
</navigation>