<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:orientation="horizontal">

    <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="14dp"
            android:focusable="true"
            android:clickable="true"
            app:strokeWidth="1sp"
            app:strokeColor="@color/main_orange">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

            <ImageView
                    android:id="@+id/ic_add_recipe"
                    android:src="@drawable/ic_add_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_add_recipe" />

            <TextView
                    android:id="@+id/tv_add_recipe"
                    android:text="@string/add_recipe"
                    android:textColor="@color/main_orange"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    app:layout_constraintTop_toBottomOf="@+id/ic_add_recipe" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            app:cardCornerRadius="14dp"
            android:focusable="true"
            android:clickable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

            <ImageView
                    android:id="@+id/ic_my_recipe"
                    android:src="@drawable/ic_add_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/tv_my_recipe"
                    android:text="@string/my_recipe"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBaseline_toBottomOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ic_my_recipe" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="14dp"
            android:focusable="true"
            android:clickable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">

            <ImageView
                    android:id="@+id/ic_purchases"
                    android:src="@drawable/ic_add_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/tv_purchases"
                    android:text="@string/purchases"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ic_purchases"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBaseline_toBottomOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textAlignment="center" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>